src/Kai/Parse/Internal.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from Internal.y
-----------------------------------------------------------------------------

state 23 contains 2 shift/reduce conflicts.
state 55 contains 1 reduce/reduce conflicts.
state 66 contains 1 reduce/reduce conflicts.
state 89 contains 1 shift/reduce conflicts.
state 122 contains 2 shift/reduce conflicts.
state 128 contains 21 shift/reduce conflicts.
state 152 contains 21 shift/reduce conflicts.
state 171 contains 2 shift/reduce conflicts.
state 187 contains 3 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseTyping -> Typing                       (0)
	%start_parseCall -> Funccall                       (1)
	%start_parseTA -> TypingArgs                       (2)
	Typing -> Typing1                                  (3)
	Typing1 ->                                         (4)
	Typing1 -> Typingbit Typing1                       (5)
	Typing1 -> Kailua Typing1                          (6)
	Typing1 -> '[' Math ']' Typing1                    (7)
	Typingbit -> newpar                                (8)
	Typingbit -> space                                 (9)
	Typingbit -> symbol                                (10)
	Math ->                                            (11)
	Math -> Mathbit Math                               (12)
	Math -> Kailua Math                                (13)
	Mathbit -> symbol                                  (14)
	Mathbit -> '{' Math '}'                            (15)
	Mathbit -> Mathbit Mathbinop Mathbit               (16)
	Mathbinop -> '^'                                   (17)
	Mathbinop -> '_'                                   (18)
	Kailua -> inline                                   (19)
	Kailua -> '{' Block '}'                            (20)
	Block -> Retstat                                   (21)
	Block ->                                           (22)
	Block -> Stat Block                                (23)
	Stat -> ';'                                        (24)
	Stat -> Varlist1 '=' Explist1                      (25)
	Stat -> Funccall                                   (26)
	Stat -> Label                                      (27)
	Stat -> break                                      (28)
	Stat -> goto Ident                                 (29)
	Stat -> do Block end                               (30)
	Stat -> while Exp do Block end                     (31)
	Stat -> repeat Block until Exp                     (32)
	Stat -> If                                         (33)
	Stat -> for Ident '=' Exp ',' Exp do Block end     (34)
	Stat -> for Ident '=' Exp ',' Exp ',' Exp do Block end   (35)
	Stat -> for Identlist1 in Explist1 do Block end    (36)
	Stat -> function Funcname Funcbody                 (37)
	Stat -> local function Ident Funcbody              (38)
	Stat -> local Identlist1                           (39)
	Stat -> local Identlist1 '=' Explist               (40)
	If -> If1 end                                      (41)
	If -> If1 else Block end                           (42)
	If1 -> if Exp then Block ElseIf                    (43)
	If1 -> if Exp then Block                           (44)
	ElseIf -> ElseIf1                                  (45)
	ElseIf -> ElseIf1 ElseIf                           (46)
	ElseIf1 -> elseif Exp then Block                   (47)
	Retstat -> return Explist                          (48)
	Retstat -> return Explist ';'                      (49)
	Label -> '::' Ident '::'                           (50)
	Funcname -> Funcname1                              (51)
	Funcname -> Funcname1 ':' Ident                    (52)
	Funcname1 -> Ident                                 (53)
	Funcname1 -> Ident '.' Funcname1                   (54)
	Varlist1 -> Varlist11                              (55)
	Varlist11 -> Var                                   (56)
	Varlist11 -> Var ',' Varlist11                     (57)
	Var -> Ident                                       (58)
	Var -> Prefixexp '[' Exp ']'                       (59)
	Var -> Prefixexp '.' Ident                         (60)
	Identlist1 -> Identlist11                          (61)
	Identlist11 -> Ident                               (62)
	Identlist11 -> Ident ',' Identlist11               (63)
	Ident -> ident                                     (64)
	Explist -> Explist11                               (65)
	Explist ->                                         (66)
	Explist1 -> Explist11                              (67)
	Explist11 -> Exp                                   (68)
	Explist11 -> Exp ',' Explist11                     (69)
	Exp -> nil                                         (70)
	Exp -> false                                       (71)
	Exp -> true                                        (72)
	Exp -> int                                         (73)
	Exp -> float                                       (74)
	Exp -> String                                      (75)
	Exp -> '...'                                       (76)
	Exp -> function Funcbody                           (77)
	Exp -> Prefixexp                                   (78)
	Exp -> Tableconstructor                            (79)
	Exp -> '<' Typing '>'                              (80)
	Exp -> Exp Binop Exp                               (81)
	Exp -> Unop Exp                                    (82)
	Prefixexp -> Var                                   (83)
	Prefixexp -> Funccall                              (84)
	Prefixexp -> '(' Exp ')'                           (85)
	Funccall -> Prefixexp Args                         (86)
	Funccall -> Prefixexp ':' Ident Args               (87)
	Args -> '(' Explist ')'                            (88)
	Args -> Tableconstructor                           (89)
	Args -> String                                     (90)
	Args -> TypingArgs                                 (91)
	TypingArgs -> '<' Typing '>' TypingArgs            (92)
	TypingArgs -> '<' Typing '>'                       (93)
	Funcbody -> '(' ')' Block end                      (94)
	Funcbody -> '(' '...' ')' Block end                (95)
	Funcbody -> '(' Identlist11 ')' Block end          (96)
	Funcbody -> '(' Identlist11 ',' '...' ')' Block end   (97)
	Tableconstructor -> '{' '}'                        (98)
	Tableconstructor -> '{' Fieldlist '}'              (99)
	Tableconstructor -> '{' Fieldlist ',' '}'          (100)
	Tableconstructor -> '{' Fieldlist ';' '}'          (101)
	Fieldlist -> Field                                 (102)
	Fieldlist -> Field ',' Fieldlist                   (103)
	Fieldlist -> Field ';' Fieldlist                   (104)
	Field -> '[' Exp ']' '=' Exp                       (105)
	Field -> Ident '=' Exp                             (106)
	Field -> Exp                                       (107)
	Binop -> '+'                                       (108)
	Binop -> '-'                                       (109)
	Binop -> '*'                                       (110)
	Binop -> '/'                                       (111)
	Binop -> '//'                                      (112)
	Binop -> '^'                                       (113)
	Binop -> '%'                                       (114)
	Binop -> '&'                                       (115)
	Binop -> '~'                                       (116)
	Binop -> '|'                                       (117)
	Binop -> '>>'                                      (118)
	Binop -> '<<'                                      (119)
	Binop -> '..'                                      (120)
	Binop -> '<'                                       (121)
	Binop -> '<='                                      (122)
	Binop -> '>'                                       (123)
	Binop -> '>='                                      (124)
	Binop -> '=='                                      (125)
	Binop -> '~='                                      (126)
	Binop -> and                                       (127)
	Binop -> or                                        (128)
	Unop -> '-'                                        (129)
	Unop -> not                                        (130)
	Unop -> '#'                                        (131)
	Unop -> '~'                                        (132)
	String -> '\'' string '\''                         (133)
	String -> '"' string '"'                           (134)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	and            { TkLua Lua.TkAnd }
	break          { TkLua Lua.TkBreak }
	do             { TkLua Lua.TkDo }
	else           { TkLua Lua.TkElse }
	elseif         { TkLua Lua.TkElseif }
	end            { TkLua Lua.TkEnd }
	false          { TkLua Lua.TkFalse }
	for            { TkLua Lua.TkFor }
	function       { TkLua Lua.TkFunction }
	goto           { TkLua Lua.TkGoto }
	if             { TkLua Lua.TkIf }
	in             { TkLua Lua.TkIn }
	local          { TkLua Lua.TkLocal }
	nil            { TkLua Lua.TkNil }
	not            { TkLua Lua.TkNot }
	or             { TkLua Lua.TkOr }
	repeat         { TkLua Lua.TkRepeat }
	return         { TkLua Lua.TkReturn }
	then           { TkLua Lua.TkThen }
	true           { TkLua Lua.TkTrue }
	until          { TkLua Lua.TkUntil }
	while          { TkLua Lua.TkWhile }
	'+'            { TkLua Lua.TkPlus }
	'-'            { TkLua Lua.TkDash }
	'*'            { TkLua Lua.TkMult }
	'/'            { TkLua Lua.TkFloatDiv }
	'%'            { TkLua Lua.TkModulo }
	'^'            { TkLua Lua.TkExponent }
	'_'            { TkUnderscore }
	'#'            { TkLua Lua.TkLength }
	'&'            { TkLua Lua.TkBitwiseAnd }
	'~'            { TkLua Lua.TkTilde }
	'|'            { TkLua Lua.TkBitwiseOr }
	'<<'           { TkLua Lua.TkLShift }
	'>>'           { TkLua Lua.TkRShift }
	'//'           { TkLua Lua.TkFloorDiv }
	'=='           { TkLua Lua.TkEq }
	'~='           { TkLua Lua.TkNeq }
	'<='           { TkLua Lua.TkLeq }
	'>='           { TkLua Lua.TkGeq }
	'<'            { TkLua Lua.TkLt }
	'>'            { TkLua Lua.TkGt }
	'='            { TkLua Lua.TkAssign }
	'('            { TkLua Lua.TkLParen }
	')'            { TkLua Lua.TkRParen }
	'{'            { TkLua Lua.TkLBrace }
	'}'            { TkLua Lua.TkRBrace }
	'['            { TkLua Lua.TkLBracket }
	']'            { TkLua Lua.TkRBracket }
	'::'           { TkLua Lua.TkLabel }
	';'            { TkLua Lua.TkSemi }
	':'            { TkLua Lua.TkColon }
	','            { TkLua Lua.TkComma }
	'.'            { TkLua Lua.TkDot }
	'..'           { TkLua Lua.TkConcat }
	'...'          { TkLua Lua.TkVararg }
	'\''           { TkLua Lua.TkQuote }
	'"'            { TkLua Lua.TkDoubleQuote }
	ident          { TkLua (Lua.TkIdent $$) }
	string         { TkLua (Lua.TkStringLit $$) }
	int            { TkLua (Lua.TkIntLit $$) }
	float          { TkLua (Lua.TkFloatLit $$) }
	inline         { TkInline $$ }
	newpar         { TkNewPar }
	space          { TkSpace }
	symbol         { TkSymbol $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseTyping rule  0
	%start_parseCall rule  1
	%start_parseTA  rule  2
	Typing          rule  3
	Typing1         rules 4, 5, 6, 7
	Typingbit       rules 8, 9, 10
	Math            rules 11, 12, 13
	Mathbit         rules 14, 15, 16
	Mathbinop       rules 17, 18
	Kailua          rules 19, 20
	Block           rules 21, 22, 23
	Stat            rules 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40
	If              rules 41, 42
	If1             rules 43, 44
	ElseIf          rules 45, 46
	ElseIf1         rule  47
	Retstat         rules 48, 49
	Label           rule  50
	Funcname        rules 51, 52
	Funcname1       rules 53, 54
	Varlist1        rule  55
	Varlist11       rules 56, 57
	Var             rules 58, 59, 60
	Identlist1      rule  61
	Identlist11     rules 62, 63
	Ident           rule  64
	Explist         rules 65, 66
	Explist1        rule  67
	Explist11       rules 68, 69
	Exp             rules 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82
	Prefixexp       rules 83, 84, 85
	Funccall        rules 86, 87
	Args            rules 88, 89, 90, 91
	TypingArgs      rules 92, 93
	Funcbody        rules 94, 95, 96, 97
	Tableconstructor rules 98, 99, 100, 101
	Fieldlist       rules 102, 103, 104
	Field           rules 105, 106, 107
	Binop           rules 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128
	Unop            rules 129, 130, 131, 132
	String          rules 133, 134

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'{'            shift, and enter state 7
	'['            shift, and enter state 8
	inline         shift, and enter state 9
	newpar         shift, and enter state 10
	space          shift, and enter state 11
	symbol         shift, and enter state 12
	%eof           reduce using rule 4

	Typing         goto state 21
	Typing1        goto state 4
	Typingbit      goto state 5
	Kailua         goto state 6

State 1


	'('            shift, and enter state 19
	ident          shift, and enter state 20

	Var            goto state 15
	Ident          goto state 16
	Prefixexp      goto state 17
	Funccall       goto state 18

State 2


	'<'            shift, and enter state 14

	TypingArgs     goto state 13

State 3


	'{'            shift, and enter state 7
	'['            shift, and enter state 8
	inline         shift, and enter state 9
	newpar         shift, and enter state 10
	space          shift, and enter state 11
	symbol         shift, and enter state 12

	Typing1        goto state 4
	Typingbit      goto state 5
	Kailua         goto state 6

State 4

	Typing -> Typing1 .                                 (rule 3)

	'>'            reduce using rule 3
	%eof           reduce using rule 3


State 5

	Typing1 -> Typingbit . Typing1                      (rule 5)

	'>'            reduce using rule 4
	'{'            shift, and enter state 7
	'['            shift, and enter state 8
	inline         shift, and enter state 9
	newpar         shift, and enter state 10
	space          shift, and enter state 11
	symbol         shift, and enter state 12
	%eof           reduce using rule 4

	Typing1        goto state 80
	Typingbit      goto state 5
	Kailua         goto state 6

State 6

	Typing1 -> Kailua . Typing1                         (rule 6)

	'>'            reduce using rule 4
	'{'            shift, and enter state 7
	'['            shift, and enter state 8
	inline         shift, and enter state 9
	newpar         shift, and enter state 10
	space          shift, and enter state 11
	symbol         shift, and enter state 12
	%eof           reduce using rule 4

	Typing1        goto state 79
	Typingbit      goto state 5
	Kailua         goto state 6

State 7

	Kailua -> '{' . Block '}'                           (rule 20)

	break          shift, and enter state 67
	do             shift, and enter state 68
	for            shift, and enter state 69
	function       shift, and enter state 70
	goto           shift, and enter state 71
	if             shift, and enter state 72
	local          shift, and enter state 73
	repeat         shift, and enter state 74
	return         shift, and enter state 75
	while          shift, and enter state 76
	'('            shift, and enter state 19
	'}'            reduce using rule 22
	'::'           shift, and enter state 77
	';'            shift, and enter state 78
	ident          shift, and enter state 20

	Block          goto state 57
	Stat           goto state 58
	If             goto state 59
	If1            goto state 60
	Retstat        goto state 61
	Label          goto state 62
	Varlist1       goto state 63
	Varlist11      goto state 64
	Var            goto state 65
	Ident          goto state 16
	Prefixexp      goto state 17
	Funccall       goto state 66

State 8

	Typing1 -> '[' . Math ']' Typing1                   (rule 7)

	'{'            shift, and enter state 55
	']'            reduce using rule 11
	inline         shift, and enter state 9
	symbol         shift, and enter state 56

	Math           goto state 52
	Mathbit        goto state 53
	Kailua         goto state 54

State 9

	Kailua -> inline .                                  (rule 19)

	'>'            reduce using rule 19
	'{'            reduce using rule 19
	'}'            reduce using rule 19
	'['            reduce using rule 19
	']'            reduce using rule 19
	inline         reduce using rule 19
	newpar         reduce using rule 19
	space          reduce using rule 19
	symbol         reduce using rule 19
	%eof           reduce using rule 19


State 10

	Typingbit -> newpar .                               (rule 8)

	'>'            reduce using rule 8
	'{'            reduce using rule 8
	'['            reduce using rule 8
	inline         reduce using rule 8
	newpar         reduce using rule 8
	space          reduce using rule 8
	symbol         reduce using rule 8
	%eof           reduce using rule 8


State 11

	Typingbit -> space .                                (rule 9)

	'>'            reduce using rule 9
	'{'            reduce using rule 9
	'['            reduce using rule 9
	inline         reduce using rule 9
	newpar         reduce using rule 9
	space          reduce using rule 9
	symbol         reduce using rule 9
	%eof           reduce using rule 9


State 12

	Typingbit -> symbol .                               (rule 10)

	'>'            reduce using rule 10
	'{'            reduce using rule 10
	'['            reduce using rule 10
	inline         reduce using rule 10
	newpar         reduce using rule 10
	space          reduce using rule 10
	symbol         reduce using rule 10
	%eof           reduce using rule 10


State 13

	%start_parseTA -> TypingArgs .                      (rule 2)

	%eof           accept


State 14

	TypingArgs -> '<' . Typing '>' TypingArgs           (rule 92)
	TypingArgs -> '<' . Typing '>'                      (rule 93)

	'>'            reduce using rule 4
	'{'            shift, and enter state 7
	'['            shift, and enter state 8
	inline         shift, and enter state 9
	newpar         shift, and enter state 10
	space          shift, and enter state 11
	symbol         shift, and enter state 12

	Typing         goto state 51
	Typing1        goto state 4
	Typingbit      goto state 5
	Kailua         goto state 6

State 15

	Prefixexp -> Var .                                  (rule 83)

	and            reduce using rule 83
	break          reduce using rule 83
	do             reduce using rule 83
	else           reduce using rule 83
	elseif         reduce using rule 83
	end            reduce using rule 83
	for            reduce using rule 83
	function       reduce using rule 83
	goto           reduce using rule 83
	if             reduce using rule 83
	local          reduce using rule 83
	or             reduce using rule 83
	repeat         reduce using rule 83
	return         reduce using rule 83
	then           reduce using rule 83
	until          reduce using rule 83
	while          reduce using rule 83
	'+'            reduce using rule 83
	'-'            reduce using rule 83
	'*'            reduce using rule 83
	'/'            reduce using rule 83
	'%'            reduce using rule 83
	'^'            reduce using rule 83
	'&'            reduce using rule 83
	'~'            reduce using rule 83
	'|'            reduce using rule 83
	'<<'           reduce using rule 83
	'>>'           reduce using rule 83
	'//'           reduce using rule 83
	'=='           reduce using rule 83
	'~='           reduce using rule 83
	'<='           reduce using rule 83
	'>='           reduce using rule 83
	'<'            reduce using rule 83
	'>'            reduce using rule 83
	'('            reduce using rule 83
	')'            reduce using rule 83
	'{'            reduce using rule 83
	'}'            reduce using rule 83
	'['            reduce using rule 83
	']'            reduce using rule 83
	'::'           reduce using rule 83
	';'            reduce using rule 83
	':'            reduce using rule 83
	','            reduce using rule 83
	'.'            reduce using rule 83
	'..'           reduce using rule 83
	'\''           reduce using rule 83
	'"'            reduce using rule 83
	ident          reduce using rule 83


State 16

	Var -> Ident .                                      (rule 58)

	and            reduce using rule 58
	break          reduce using rule 58
	do             reduce using rule 58
	else           reduce using rule 58
	elseif         reduce using rule 58
	end            reduce using rule 58
	for            reduce using rule 58
	function       reduce using rule 58
	goto           reduce using rule 58
	if             reduce using rule 58
	local          reduce using rule 58
	or             reduce using rule 58
	repeat         reduce using rule 58
	return         reduce using rule 58
	then           reduce using rule 58
	until          reduce using rule 58
	while          reduce using rule 58
	'+'            reduce using rule 58
	'-'            reduce using rule 58
	'*'            reduce using rule 58
	'/'            reduce using rule 58
	'%'            reduce using rule 58
	'^'            reduce using rule 58
	'&'            reduce using rule 58
	'~'            reduce using rule 58
	'|'            reduce using rule 58
	'<<'           reduce using rule 58
	'>>'           reduce using rule 58
	'//'           reduce using rule 58
	'=='           reduce using rule 58
	'~='           reduce using rule 58
	'<='           reduce using rule 58
	'>='           reduce using rule 58
	'<'            reduce using rule 58
	'>'            reduce using rule 58
	'='            reduce using rule 58
	'('            reduce using rule 58
	')'            reduce using rule 58
	'{'            reduce using rule 58
	'}'            reduce using rule 58
	'['            reduce using rule 58
	']'            reduce using rule 58
	'::'           reduce using rule 58
	';'            reduce using rule 58
	':'            reduce using rule 58
	','            reduce using rule 58
	'.'            reduce using rule 58
	'..'           reduce using rule 58
	'\''           reduce using rule 58
	'"'            reduce using rule 58
	ident          reduce using rule 58


State 17

	Var -> Prefixexp . '[' Exp ']'                      (rule 59)
	Var -> Prefixexp . '.' Ident                        (rule 60)
	Funccall -> Prefixexp . Args                        (rule 86)
	Funccall -> Prefixexp . ':' Ident Args              (rule 87)

	'<'            shift, and enter state 14
	'('            shift, and enter state 47
	'{'            shift, and enter state 37
	'['            shift, and enter state 48
	':'            shift, and enter state 49
	'.'            shift, and enter state 50
	'\''           shift, and enter state 39
	'"'            shift, and enter state 40

	Args           goto state 43
	TypingArgs     goto state 44
	Tableconstructorgoto state 45
	String         goto state 46

State 18

	%start_parseCall -> Funccall .                      (rule 1)
	Prefixexp -> Funccall .                             (rule 84)

	'<'            reduce using rule 84
	'('            reduce using rule 84
	'{'            reduce using rule 84
	'['            reduce using rule 84
	':'            reduce using rule 84
	'.'            reduce using rule 84
	'\''           reduce using rule 84
	'"'            reduce using rule 84
	%eof           accept


State 19

	Prefixexp -> '(' . Exp ')'                          (rule 85)

	false          shift, and enter state 28
	function       shift, and enter state 29
	nil            shift, and enter state 30
	not            shift, and enter state 31
	true           shift, and enter state 32
	'-'            shift, and enter state 33
	'#'            shift, and enter state 34
	'~'            shift, and enter state 35
	'<'            shift, and enter state 36
	'('            shift, and enter state 19
	'{'            shift, and enter state 37
	'...'          shift, and enter state 38
	'\''           shift, and enter state 39
	'"'            shift, and enter state 40
	ident          shift, and enter state 20
	int            shift, and enter state 41
	float          shift, and enter state 42

	Var            goto state 15
	Ident          goto state 16
	Exp            goto state 22
	Prefixexp      goto state 23
	Funccall       goto state 24
	Tableconstructorgoto state 25
	Unop           goto state 26
	String         goto state 27

State 20

	Ident -> ident .                                    (rule 64)

	and            reduce using rule 64
	break          reduce using rule 64
	do             reduce using rule 64
	else           reduce using rule 64
	elseif         reduce using rule 64
	end            reduce using rule 64
	for            reduce using rule 64
	function       reduce using rule 64
	goto           reduce using rule 64
	if             reduce using rule 64
	in             reduce using rule 64
	local          reduce using rule 64
	or             reduce using rule 64
	repeat         reduce using rule 64
	return         reduce using rule 64
	then           reduce using rule 64
	until          reduce using rule 64
	while          reduce using rule 64
	'+'            reduce using rule 64
	'-'            reduce using rule 64
	'*'            reduce using rule 64
	'/'            reduce using rule 64
	'%'            reduce using rule 64
	'^'            reduce using rule 64
	'&'            reduce using rule 64
	'~'            reduce using rule 64
	'|'            reduce using rule 64
	'<<'           reduce using rule 64
	'>>'           reduce using rule 64
	'//'           reduce using rule 64
	'=='           reduce using rule 64
	'~='           reduce using rule 64
	'<='           reduce using rule 64
	'>='           reduce using rule 64
	'<'            reduce using rule 64
	'>'            reduce using rule 64
	'='            reduce using rule 64
	'('            reduce using rule 64
	')'            reduce using rule 64
	'{'            reduce using rule 64
	'}'            reduce using rule 64
	'['            reduce using rule 64
	']'            reduce using rule 64
	'::'           reduce using rule 64
	';'            reduce using rule 64
	':'            reduce using rule 64
	','            reduce using rule 64
	'.'            reduce using rule 64
	'..'           reduce using rule 64
	'\''           reduce using rule 64
	'"'            reduce using rule 64
	ident          reduce using rule 64


State 21

	%start_parseTyping -> Typing .                      (rule 0)

	%eof           accept


State 22

	Exp -> Exp . Binop Exp                              (rule 81)
	Prefixexp -> '(' Exp . ')'                          (rule 85)

	and            shift, and enter state 130
	or             shift, and enter state 131
	'+'            shift, and enter state 132
	'-'            shift, and enter state 133
	'*'            shift, and enter state 134
	'/'            shift, and enter state 135
	'%'            shift, and enter state 136
	'^'            shift, and enter state 137
	'&'            shift, and enter state 138
	'~'            shift, and enter state 139
	'|'            shift, and enter state 140
	'<<'           shift, and enter state 141
	'>>'           shift, and enter state 142
	'//'           shift, and enter state 143
	'=='           shift, and enter state 144
	'~='           shift, and enter state 145
	'<='           shift, and enter state 146
	'>='           shift, and enter state 147
	'<'            shift, and enter state 148
	'>'            shift, and enter state 149
	')'            shift, and enter state 150
	'..'           shift, and enter state 151

	Binop          goto state 129

State 23

	Var -> Prefixexp . '[' Exp ']'                      (rule 59)
	Var -> Prefixexp . '.' Ident                        (rule 60)
	Exp -> Prefixexp .                                  (rule 78)
	Funccall -> Prefixexp . Args                        (rule 86)
	Funccall -> Prefixexp . ':' Ident Args              (rule 87)

	and            reduce using rule 78
	break          reduce using rule 78
	do             reduce using rule 78
	else           reduce using rule 78
	elseif         reduce using rule 78
	end            reduce using rule 78
	for            reduce using rule 78
	function       reduce using rule 78
	goto           reduce using rule 78
	if             reduce using rule 78
	local          reduce using rule 78
	or             reduce using rule 78
	repeat         reduce using rule 78
	return         reduce using rule 78
	then           reduce using rule 78
	until          reduce using rule 78
	while          reduce using rule 78
	'+'            reduce using rule 78
	'-'            reduce using rule 78
	'*'            reduce using rule 78
	'/'            reduce using rule 78
	'%'            reduce using rule 78
	'^'            reduce using rule 78
	'&'            reduce using rule 78
	'~'            reduce using rule 78
	'|'            reduce using rule 78
	'<<'           reduce using rule 78
	'>>'           reduce using rule 78
	'//'           reduce using rule 78
	'=='           reduce using rule 78
	'~='           reduce using rule 78
	'<='           reduce using rule 78
	'>='           reduce using rule 78
	'<'            shift, and enter state 14
			(reduce using rule 78)

	'>'            reduce using rule 78
	'('            shift, and enter state 47
			(reduce using rule 78)

	')'            reduce using rule 78
	'{'            shift, and enter state 37
	'}'            reduce using rule 78
	'['            shift, and enter state 48
	']'            reduce using rule 78
	'::'           reduce using rule 78
	';'            reduce using rule 78
	':'            shift, and enter state 49
	','            reduce using rule 78
	'.'            shift, and enter state 50
	'..'           reduce using rule 78
	'\''           shift, and enter state 39
	'"'            shift, and enter state 40
	ident          reduce using rule 78

	Args           goto state 43
	TypingArgs     goto state 44
	Tableconstructorgoto state 45
	String         goto state 46

State 24

	Prefixexp -> Funccall .                             (rule 84)

	and            reduce using rule 84
	break          reduce using rule 84
	do             reduce using rule 84
	else           reduce using rule 84
	elseif         reduce using rule 84
	end            reduce using rule 84
	for            reduce using rule 84
	function       reduce using rule 84
	goto           reduce using rule 84
	if             reduce using rule 84
	local          reduce using rule 84
	or             reduce using rule 84
	repeat         reduce using rule 84
	return         reduce using rule 84
	then           reduce using rule 84
	until          reduce using rule 84
	while          reduce using rule 84
	'+'            reduce using rule 84
	'-'            reduce using rule 84
	'*'            reduce using rule 84
	'/'            reduce using rule 84
	'%'            reduce using rule 84
	'^'            reduce using rule 84
	'&'            reduce using rule 84
	'~'            reduce using rule 84
	'|'            reduce using rule 84
	'<<'           reduce using rule 84
	'>>'           reduce using rule 84
	'//'           reduce using rule 84
	'=='           reduce using rule 84
	'~='           reduce using rule 84
	'<='           reduce using rule 84
	'>='           reduce using rule 84
	'<'            reduce using rule 84
	'>'            reduce using rule 84
	'('            reduce using rule 84
	')'            reduce using rule 84
	'{'            reduce using rule 84
	'}'            reduce using rule 84
	'['            reduce using rule 84
	']'            reduce using rule 84
	'::'           reduce using rule 84
	';'            reduce using rule 84
	':'            reduce using rule 84
	','            reduce using rule 84
	'.'            reduce using rule 84
	'..'           reduce using rule 84
	'\''           reduce using rule 84
	'"'            reduce using rule 84
	ident          reduce using rule 84


State 25

	Exp -> Tableconstructor .                           (rule 79)

	and            reduce using rule 79
	break          reduce using rule 79
	do             reduce using rule 79
	else           reduce using rule 79
	elseif         reduce using rule 79
	end            reduce using rule 79
	for            reduce using rule 79
	function       reduce using rule 79
	goto           reduce using rule 79
	if             reduce using rule 79
	local          reduce using rule 79
	or             reduce using rule 79
	repeat         reduce using rule 79
	return         reduce using rule 79
	then           reduce using rule 79
	until          reduce using rule 79
	while          reduce using rule 79
	'+'            reduce using rule 79
	'-'            reduce using rule 79
	'*'            reduce using rule 79
	'/'            reduce using rule 79
	'%'            reduce using rule 79
	'^'            reduce using rule 79
	'&'            reduce using rule 79
	'~'            reduce using rule 79
	'|'            reduce using rule 79
	'<<'           reduce using rule 79
	'>>'           reduce using rule 79
	'//'           reduce using rule 79
	'=='           reduce using rule 79
	'~='           reduce using rule 79
	'<='           reduce using rule 79
	'>='           reduce using rule 79
	'<'            reduce using rule 79
	'>'            reduce using rule 79
	'('            reduce using rule 79
	')'            reduce using rule 79
	'}'            reduce using rule 79
	']'            reduce using rule 79
	'::'           reduce using rule 79
	';'            reduce using rule 79
	','            reduce using rule 79
	'..'           reduce using rule 79
	ident          reduce using rule 79


State 26

	Exp -> Unop . Exp                                   (rule 82)

	false          shift, and enter state 28
	function       shift, and enter state 29
	nil            shift, and enter state 30
	not            shift, and enter state 31
	true           shift, and enter state 32
	'-'            shift, and enter state 33
	'#'            shift, and enter state 34
	'~'            shift, and enter state 35
	'<'            shift, and enter state 36
	'('            shift, and enter state 19
	'{'            shift, and enter state 37
	'...'          shift, and enter state 38
	'\''           shift, and enter state 39
	'"'            shift, and enter state 40
	ident          shift, and enter state 20
	int            shift, and enter state 41
	float          shift, and enter state 42

	Var            goto state 15
	Ident          goto state 16
	Exp            goto state 128
	Prefixexp      goto state 23
	Funccall       goto state 24
	Tableconstructorgoto state 25
	Unop           goto state 26
	String         goto state 27

State 27

	Exp -> String .                                     (rule 75)

	and            reduce using rule 75
	break          reduce using rule 75
	do             reduce using rule 75
	else           reduce using rule 75
	elseif         reduce using rule 75
	end            reduce using rule 75
	for            reduce using rule 75
	function       reduce using rule 75
	goto           reduce using rule 75
	if             reduce using rule 75
	local          reduce using rule 75
	or             reduce using rule 75
	repeat         reduce using rule 75
	return         reduce using rule 75
	then           reduce using rule 75
	until          reduce using rule 75
	while          reduce using rule 75
	'+'            reduce using rule 75
	'-'            reduce using rule 75
	'*'            reduce using rule 75
	'/'            reduce using rule 75
	'%'            reduce using rule 75
	'^'            reduce using rule 75
	'&'            reduce using rule 75
	'~'            reduce using rule 75
	'|'            reduce using rule 75
	'<<'           reduce using rule 75
	'>>'           reduce using rule 75
	'//'           reduce using rule 75
	'=='           reduce using rule 75
	'~='           reduce using rule 75
	'<='           reduce using rule 75
	'>='           reduce using rule 75
	'<'            reduce using rule 75
	'>'            reduce using rule 75
	'('            reduce using rule 75
	')'            reduce using rule 75
	'}'            reduce using rule 75
	']'            reduce using rule 75
	'::'           reduce using rule 75
	';'            reduce using rule 75
	','            reduce using rule 75
	'..'           reduce using rule 75
	ident          reduce using rule 75


State 28

	Exp -> false .                                      (rule 71)

	and            reduce using rule 71
	break          reduce using rule 71
	do             reduce using rule 71
	else           reduce using rule 71
	elseif         reduce using rule 71
	end            reduce using rule 71
	for            reduce using rule 71
	function       reduce using rule 71
	goto           reduce using rule 71
	if             reduce using rule 71
	local          reduce using rule 71
	or             reduce using rule 71
	repeat         reduce using rule 71
	return         reduce using rule 71
	then           reduce using rule 71
	until          reduce using rule 71
	while          reduce using rule 71
	'+'            reduce using rule 71
	'-'            reduce using rule 71
	'*'            reduce using rule 71
	'/'            reduce using rule 71
	'%'            reduce using rule 71
	'^'            reduce using rule 71
	'&'            reduce using rule 71
	'~'            reduce using rule 71
	'|'            reduce using rule 71
	'<<'           reduce using rule 71
	'>>'           reduce using rule 71
	'//'           reduce using rule 71
	'=='           reduce using rule 71
	'~='           reduce using rule 71
	'<='           reduce using rule 71
	'>='           reduce using rule 71
	'<'            reduce using rule 71
	'>'            reduce using rule 71
	'('            reduce using rule 71
	')'            reduce using rule 71
	'}'            reduce using rule 71
	']'            reduce using rule 71
	'::'           reduce using rule 71
	';'            reduce using rule 71
	','            reduce using rule 71
	'..'           reduce using rule 71
	ident          reduce using rule 71


State 29

	Exp -> function . Funcbody                          (rule 77)

	'('            shift, and enter state 127

	Funcbody       goto state 126

State 30

	Exp -> nil .                                        (rule 70)
